# lana

./: .env.example  .gitignore  AGENTS.md  Doctrine Operator.cmd  Doctrine Operator.vbs  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/: architecture.md  doctrine_closure_audit_final.md  doctrine_closure_audit_initial.md  doctrine_definitions.md  event_risk_rules.md  extensible_context_audit.md  final_implementation_verification_final.md  final_implementation_verification_initial.md  go_live_changes.md  labeling_and_validation.md  manual_trading_sop.md  operator_handoff_pack.md  operator_output_propagation_matrix.md  operator_start_run_checklist.md  project_closure_matrix_final.md  project_closure_matrix_initial.md  regime_rules.md  release_handoff.md  runtime_validation_pack.md  signal_contract.md  timing_and_micro_semantics.md  trade_plan_contract.md  universe_rules.md
src/doctrine_engine/: __init__.py
tests/: test_doctrine_reviews.py
tests/alerts/: test_telegram_renderer.py  test_telegram_renderer_missing_states.py  test_workflow_decision.py  test_workflow_state_rules.py
tests/config/: test_settings.py
tests/engines/: test_feature_persistence_mapping.py  test_pattern_engine_compression_displacement.py  test_pattern_engine_reclaim_family.py  test_signal_engine_bias_and_setup.py  test_signal_engine_decision_and_confidence.py  test_signal_engine_delayed_data.py  test_signal_engine_triggers_and_alignment.py  test_structure_engine_references.py  test_structure_engine_swings.py  test_trade_plan_engine_entry_levels.py  test_trade_plan_engine_gating.py  test_trade_plan_engine_timestamps.py  (+2 more)
(+91 files in other folders)
