[build-system]
requires = ["editables>=0.5", "hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "structure-doctrine-engine"
version = "0.1.0"
description = "Production-grade long-only structural signal platform for U.S. stocks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.9",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.34.0",
]

[project.scripts]
doctrine = "doctrine_engine.product.cli:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doctrine_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
